Refs #289194 - ChatbotFloatingButton - fix z-index (to be under Cookies banner).

--- a/src/components/Footer/chatbot-floating-button.less
+++ b/src/components/Footer/chatbot-floating-button.less
@@ -1,6 +1,6 @@
 .chatbot-floating-button {
   position: fixed;
-  z-index: 1000;
+  z-index: 995; // Cookies banner has 1000
   right: 20px;
   bottom: 20px;
   display: flex;
@@ -12,7 +12,9 @@
   border-radius: 50%;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 
   img {
     width: 28px;
